# sync-async

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: callback.py  config.py  db.py  main.py  models.py  work.py  worker.py
loadgen/: callback_server.py  runner.py
tests/: test_api.py  test_ssrf.py  test_work.py
