[project]
name = "consuma"
version = "0.1.0"
description = "Sync vs Async (callback) API service under request storms"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "loadgen*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
